Nav contrast fix, and Header/footer image fix

--- a/week06/chamber/styles/small.css
+++ b/week06/chamber/styles/small.css
@@ -1,7 +1,7 @@
 header,
 footer {
   font-family: "Aclonica", sans-serif;
-  background-image: url(https://i.pinimg.com/originals/53/b4/44/53b444ea99a7b8c7e90631ea6e81e877.jpg);
+  /* background-image: url(https://i.pinimg.com/originals/53/b4/44/53b444ea99a7b8c7e90631ea6e81e877.jpg); */
   padding: 5px 0;
   display: flex;
   flex-direction: column;
@@ -67,7 +67,7 @@ nav ul li.active a {
 
 nav ul li a:hover {
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgb(0, 0, 0);
   color: #ac0303;
 }
 
